# sams

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SAMS_Documentation.md  pyproject.toml
agents/builtin/: aegis.agent.yaml  atlas.agent.yaml  beacon.agent.yaml  cipher.agent.yaml  compass.agent.yaml  concierge.agent.yaml  conduit.agent.yaml  courier.agent.yaml  echo.agent.yaml  forge.agent.yaml  gauntlet.agent.yaml  hermes.agent.yaml  hex.agent.yaml  janitor.agent.yaml  ledger.agent.yaml  linguist.agent.yaml  muse.agent.yaml  nova.agent.yaml  opus.agent.yaml  oracle.agent.yaml  palette.agent.yaml  pixel.agent.yaml  prism.agent.yaml  probe.agent.yaml  quill.agent.yaml  quote.agent.yaml  relay.agent.yaml  rune.agent.yaml  sage.agent.yaml  scribe.agent.yaml  sentinel.agent.yaml  spotlight.agent.yaml  tally.agent.yaml  tinker.agent.yaml  warden.agent.yaml  watchtower.agent.yaml
agents/custom/: greeter.agent.yaml  seo-agent.agent.yaml  seo_agent.py
agents/roles/: deployer.agent.yaml  designer.agent.yaml  developer.agent.yaml  planner.agent.yaml  reviewer.agent.yaml  tester.agent.yaml
assets/: labs-layout.spatial  office-layout.spatial
configs/: agents.yaml  permissions.yaml  sams.yaml
packs/accessibility-pack/: a11y_prompt.md  pack.yaml
sams/: __init__.py  cli.py  coding.py  pipeline.py  platform.py
sams/api/: __init__.py  app.py  rest.py  ws.py
sams/catalog/: __init__.py  loader.py
tests/: conftest.py  smoke.py  test_sams.py
web/: index.html  package-lock.json  package.json  vite.config.ts
workflows/: code-review.flow  deploy.flow  onboarding.flow
(+89 files in other folders)
