[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sams"
version = "0.9.0"
description = "SAMS — Spatial Agentic Management System. The Sims for managing AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SAMS" }]
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.9",
  "rich>=13.7",
  "httpx>=0.26",
  "websockets>=12.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
anthropic = ["anthropic>=0.25"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[project.scripts]
sams = "sams.cli:app"

[tool.setuptools.packages.find]
include = ["sams*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
